# omanage

./: README.md  pyproject.toml  requirements.txt
omanage/: __init__.py  __main__.py  api.py  cli.py  config.py  index.py  logging_config.py  main.py  utils.py
omanage/api_core/: __init__.py  errors.py  file_utils.py  locking.py  subprocess_utils.py
omanage/cli_core/: __init__.py  commands.py  parser.py
